@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-2059] fixed special char treatment in XML export (Aly)
  - [ZBX-1655] improved error message on map save with circular reference (Aly)
  - [ZBX-1823] improved map element labels expansion in map editing screen (Aly)
  - [ZBX-1991] added sequences for autoincrement fields to oracle.sql (Sasha)
